# exploreGPT

./: .env.example  README.md  hybrid.py  main.py  micro.py  production.md  pyproject.toml  tto.py  ttt.py
docs/comparisons/: tto_vs_main.md  tto_vs_micro.md  ttt.md  ttt_vs_main.md  ttt_vs_mirco.md  ttt_vs_tto.md
docs/explanations/: adam_optimizer_explanation.md  cross_entropy_loss_explanation.md  gpt_function_explanation.md  kv_cache_explanation.md  linear_function_explanation.md  linear_projection_explanation.md  residual_connection_explanation.md  rmsnorm_simple_explanation.md  self_attention_demo.md  state_dict_explained.md  target_label_explanation.md
docs/misc/: TODO.md  pyrightconfig.md
docs/tutorials/: TUTORIAL_TXT.md  TUTORIAL_TXT_REFINED.md
schema/: explain_backprop_260228_152615.md  local_grads_explanation.md  magic_methods_auto_vs_manual.md  magic_methods_explanation.md  task_eval_project_260306_093700.md  task_novel_train_260307_135818.md  task_refine_tutorial_260302_173400.md  task_tutorial_260227_170232.md  underscore_vs_regular_methods.md  why_magic_methods_auto.md
schema/archive/: task_refactor_main_train_260314_164032.md
