[project]
name = "exploregpt"
version = "0.2.0"
description = "Minimal GPT implementation for novel training"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "torch>=2.0.0",
    "tiktoken>=0.5.0",
    "tqdm>=4.66.0",
    "numpy>=1.24.0",
]
